# lets-sub-it

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  RULES.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.yml  mise.toml  opencode.json
.claude/: CLAUDE.md  settings.json
.claude/rules/: plan-to-issue.md  superpowers-plan-spec.md  superpowers-spec.md
.codex/environments/: environment.toml
.github/: pull_request_template.md
.github/workflows/: backend-ci.yml  backend-image.yml  extension-build.yml  extension-ci.yml  whisper-ci.yml
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
backend/: .gitignore  Dockerfile  README.md  go.mod  go.sum
backend/testdata/: transcript_segments.json
docs/: AGENTS.md  CLAUDE.md  PRD.md  README.md
docs/explanation/: README.md  architecture-overview.md  module-boundaries.md  processing-pipeline.md  security-and-privacy.md
docs/how-to/: README.md  docker-deployment.md  local-development.md  (+2 more)
extension/: .gitignore  README.md  components.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  wxt.config.ts
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
whisper/: Dockerfile  README.md  pyproject.toml
whisper/src/whisper_cli/: cli.py  server.py  transcribe.py  vtt.py
whisper/tests/: test_cli.py  test_server.py  test_transcribe.py  test_vtt.py
(+166 files in other folders)
