[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-cli"
version = "0.1.0"
description = "Local faster-whisper CLI that writes validated VTT output"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "faster-whisper>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
